Name:                     interactive-brokers
Version:                  0.1
Synopsis:                 Interactive Brokers API
Description:              Interactive Brokers API
Homepage:                 www.github.com/cmahon/interactive-brokers
License:                  BSD3
License-File:             LICENSE
Author:                   Chris Mahon
Maintainer:               cnmahon@gmail.com
Copyright:                Chris Mahon 2016
Category:                 API
Build-Type:               Simple
Stability:                Experimental
Tested-with:              GHC == 7.10.3
Cabal-Version:            >= 1.8
Extra-Source-Files:       README.md

Source-Repository         head
  type:                   git
  location:               git://github.com/cmahon/interactive-brokers.git

Library
  hs-source-dirs:         library
  ghc-options:            -Wall -O2 -threaded -fprof-auto -rtsopts
  default-language:       Haskell2010
  exposed-modules:        API.IB
  other-modules:          API.IB.Builder
                          API.IB.Constant
                          API.IB.Connection
                          API.IB.Data 
                          API.IB.Enum
                          API.IB.Monadic
                          API.IB.Request
                          API.IB.Parse
                          API.IB.Util
                          Pipes.Edge
  build-depends:          base,
                          async,
                          attoparsec,
                          bytestring,
                          containers,
                          currency,
                          data-default,
                          errors,
                          haskeline,
                          hslogger,
                          hslogger-template,
                          lens,
                          mvc,
                          mvc-service,
                          mtl,
                          network,
                          network-simple,
                          old-locale,
                          pipes,
                          pipes-concurrency,
                          pipes-network,
                          scientific,
                          split,
                          stm,
                          time,
                          transformers,
                          tz

Executable ib
  main-is:                IB.hs
  default-language:       Haskell2010
  ghc-options:            -Wall -O2 -threaded -fprof-auto -rtsopts
  hs-source-dirs:         executable
  build-depends:          base,
                          data-default,
                          hslogger,
                          interactive-brokers,
                          time,
                          transformers

Executable requests-service
  main-is:                Requests-Service.hs
  default-language:       Haskell2010
  ghc-options:            -Wall -O2 -threaded -fprof-auto -rtsopts
  hs-source-dirs:         executable
  build-depends:          base,
                          data-default,
                          hslogger,
                          interactive-brokers,
                          lens,
                          mvc,
                          mvc-service,
                          network-simple,
                          old-locale,
                          time,
                          tz

Executable requests-simple
  main-is:                Requests-Simple.hs
  default-language:       Haskell2010
  ghc-options:            -Wall -O2 -threaded -fprof-auto -rtsopts
  hs-source-dirs:         executable
  build-depends:          base,
                          data-default,
                          hslogger,
                          interactive-brokers,
                          time,
                          transformers

Executable shell
  main-is:                Shell.hs
  default-language:       Haskell2010
  ghc-options:            -Wall -O2 -threaded -fprof-auto -rtsopts
  hs-source-dirs:         executable
  build-depends:          base,
                          data-default,
                          haskeline,
                          interactive-brokers,
                          mvc,
                          time

test-suite tasty
  main-is:                Tasty.hs
  build-depends:          base >= 4, tasty, tasty-hunit, tasty-quickcheck, tasty-smallcheck
  default-language:       Haskell2010
  hs-source-dirs:         test-suite
  type:                   exitcode-stdio-1.0



